--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "esModuleInterop": true,
+    "declaration": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "outDir": "build"
@@ -19,5 +20,5 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/test.ts"]
 }
